<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login">


    <ImageButton
        android:id="@+id/btn_backtologin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:src="@drawable/arrow"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_account"
        android:text="@string/create_count"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_backtologin"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="35dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_fullname"
        android:layout_marginTop="25dp"
        android:hint="@string/fullname"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_semibold"
        android:background="@drawable/custom_edt"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="35dp"
        app:layout_goneMarginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/create_account"
        app:layout_constraintBottom_toTopOf="@+id/register_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_email"
        android:hint="@string/email"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_semibold"
        android:background="@drawable/custom_edt"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/register_fullname"
        app:layout_constraintBottom_toTopOf="@+id/register_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_password"
        android:hint="@string/password"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:fontFamily="@font/montserrat_semibold"
        android:background="@drawable/custom_edt"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/register_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="35dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_retype_password"
        android:hint="@string/retype_password"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:fontFamily="@font/montserrat_semibold"
        android:background="@drawable/custom_edt"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_incorrect_retype_password"
        android:text="@string/incorrect_retype_password"
        android:textSize="20sp"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/register_retype_password"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="35dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:backgroundTint="@color/green"
        android:padding="15dp"
        android:text="@string/register"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@id/register_incorrect_retype_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="464dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/or"
        android:text="@string/or"
        android:textSize="16sp"
        android:visibility="gone"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:visibility="gone"
        android:src="@drawable/facebook"
        android:id="@+id/facebook"
        android:scaleType="centerInside"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/or"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/new1"
        android:visibility="gone"
        android:scaleType="centerInside"
        android:id="@+id/gmail"
        app:layout_constraintTop_toBottomOf="@+id/or"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_redirect"
        android:text="@string/signin"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        android:textColor="@color/green"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="60dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>