<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:textSize="28sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/logo"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/incorrect"
        android:text="@string/incorrect"
        android:textSize="13sp"
        android:fontFamily="@font/montserrat_medium"
        android:padding="5dp"
        android:visibility="invisible"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toTopOf="@id/login_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="35dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:background="@drawable/custom_edt"
        android:hint="@string/email"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        android:padding="15dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/incorrect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/login_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:hint="@string/password"
        android:textSize="16sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="18dp"
        android:inputType="textPassword"
        android:fontFamily="@font/montserrat_semibold"
        android:background="@drawable/custom_edt"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password"
        android:textColor="@color/green"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="35dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btn_login"
        android:text="@string/login"
        style="@style/GreenButton"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="35dp"
        android:background="@drawable/custom_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/or"
        android:text="@string/or"
        android:visibility="gone"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/facebook"
        android:id="@+id/facebook"
        android:scaleType="centerInside"
        android:visibility="gone"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/or"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/new1"
        android:scaleType="centerInside"
        android:visibility="gone"
        android:id="@+id/gmail"
        app:layout_constraintTop_toBottomOf="@+id/or"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_redirect"
        android:text="@string/signup"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        android:textColor="@color/green"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="60dp"
        />

    <CheckBox
        android:id="@+id/check_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lưu đăng nhập"
        android:textSize="16sp"
        android:textColor="@color/green"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        android:layout_marginLeft="35dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>